--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="parking_lot"/>
+	<classpathentry kind="src" path="parking_lot_novice"/>
 	<classpathentry kind="src" path="factory_pattern"/>
 	<classpathentry kind="src" path="factory_method_pattern"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
