--- a/factory-pattern/pom.xml
+++ b/factory-pattern/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>abstract-factory-pattern</artifactId>
+    <artifactId>factory-pattern</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
