--- a/cab-booking-system-pro/geo-service/src/main/resources/application.properties
+++ b/cab-booking-system-pro/geo-service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=50006
 
+spring.datasource.url=jdbc:h2:file:./cab-booking-system-pro/data/geo-service-db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.h2.console.enabled=true
