--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
         <module>intercepting-filter-pattern</module>
         <module>cab-booking-system-pro</module>
         <module>parking-lot-intermediate</module>
+        <module>strategy-pattern</module>
+        <module>parking-lot-novice</module>
+        <module>adapter-pattern</module>
     </modules>
 
     <properties>
