simplifying cordianate key type and adding api to find drivers

--- a/cab-booking-system-pro/pom.xml
+++ b/cab-booking-system-pro/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>driver-location-service</module>
         <module>geo-service</module>
+        <module>trip-service</module>
     </modules>
 
     <properties>
