adding websocket manager

--- a/cab-booking-system-pro/pom.xml
+++ b/cab-booking-system-pro/pom.xml
@@ -16,6 +16,7 @@
         <module>driver-location-service</module>
         <module>geo-service</module>
         <module>trip-service</module>
+        <module>websocket-manager</module>
     </modules>
 
     <properties>
