bootstrapping food delivery app novice

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>adapter-pattern</module>
         <module>trading-system-novice</module>
         <module>search-engine-novice</module>
+        <module>food-delivery-service-novice</module>
     </modules>
 
     <properties>
