--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+<!--        <spring-boot-starter-parent.version>2.5.5</spring-boot-starter-parent.version>-->
     </properties>
 
 </project>
